🎨: Fixes, labels in narrow thread view, better label wrap

--- a/static/workspace.less
+++ b/static/workspace.less
@@ -160,7 +160,7 @@ body.is-blurred {
 
 .sheet-toolbar-container {
   background-image: -webkit-linear-gradient(top, lighten(@toolbar-background-color, 9%), @toolbar-background-color);
-  box-shadow: inset 0 1px 0 lighten(@toolbar-background-color, 15%);
+  box-shadow: inset 0 1px 0 lighten(@toolbar-background-color, 10%);
   color:@text-color-heading;
 }
 
